<resources>
    <string name="app_name">Rongu2</string>
    <string name="ws_uri">10.4.65.146</string>
    <string name="account_number">账号</string>
    <string name="pass_word">密码</string>
    <string name="login">登录</string>
    <string name="about_us">关于我们</string>
    <string name="regist">注册账号</string>
    <string name="user_name">昵称</string>
    <string name="re_pass_word">确认密码</string>
    <string name="me_logout">退出登录</string>
    <string name="me_edit_name">修改昵称</string>
    <string name="me_edit_password">修改密码</string>
    <string name="search">查询</string>
    <string name="search_name">对方昵称或账号</string>
    <string name="add">添加</string>
    <string name="yes">同意</string>
    <string name="no">拒绝</string>
    <string name="friendrequest">新朋友</string>
    <string name="send">发送</string>
</resources>