<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="30">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="50"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:orientation="horizontal"
                android:layout_weight="25">
                <TextView
                    android:layout_width="0px"
                    android:layout_weight="30"
                    android:layout_height="match_parent"
                    android:text="@string/account_number"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#111111"/>
                <EditText
                    android:id="@+id/login_account_number"
                    android:layout_marginTop="35sp"
                    android:layout_marginBottom="35sp"
                    android:layout_marginRight="40sp"
                    android:paddingLeft="10sp"
                    android:layout_width="0px"
                    android:layout_weight="70"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_background"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:orientation="horizontal"
                android:layout_weight="25">
                <TextView
                    android:layout_width="0px"
                    android:layout_weight="30"
                    android:layout_height="match_parent"
                    android:text="@string/pass_word"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#111111"/>
                <EditText
                    android:id="@+id/login_pass_word"
                    android:layout_marginTop="35sp"
                    android:layout_marginBottom="35sp"
                    android:layout_marginRight="40sp"
                    android:paddingLeft="10sp"
                    android:layout_width="0px"
                    android:layout_weight="70"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_background"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="30">
                <Button
                    android:id="@+id/login_login"
                    android:layout_marginRight="80sp"
                    android:layout_marginLeft="80sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_background"
                    android:text="@string/login"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="20"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="10"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="10"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/login_reg"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="20sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/regist"
                    android:textColor="#001155"/>
                <TextView
                    android:id="@+id/login_about_us"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="20sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textColor="#001155"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>