<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:background="#4488ff"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0px"
                android:layout_weight="10"
                android:layout_height="match_parent">

            </LinearLayout>
            <LinearLayout
                android:layout_width="0px"
                android:layout_weight="10"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:text="我的"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0px"
                android:layout_weight="10"
                android:layout_height="match_parent">

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="90"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="20"
                android:orientation="horizontal">
                <LinearLayout
                        android:layout_width="0px"
                        android:layout_weight="40"
                        android:layout_height="match_parent">

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0px"
                    android:layout_weight="80"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0px"
                        android:layout_weight="10"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0px"
                            android:layout_weight="10"
                            android:gravity="center"
                            android:text="账号"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:layout_marginLeft="30sp"
                            android:id="@+id/me_account_numb"
                            android:layout_width="0px"
                            android:layout_weight="30"
                            android:gravity="center|left"
                            android:layout_height="match_parent"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0px"
                        android:layout_weight="10"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0px"
                            android:layout_weight="10"
                            android:gravity="center"
                            android:text="昵称"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:layout_marginLeft="30sp"
                            android:id="@+id/me_user_name"
                            android:layout_width="0px"
                            android:layout_weight="30"
                            android:gravity="center|left"
                            android:layout_height="match_parent"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0px"
                        android:layout_weight="10"
                        android:orientation="horizontal">
                        <Button
                            android:layout_marginRight="5sp"
                            android:layout_marginLeft="5sp"
                            android:layout_width="0px"
                            android:layout_weight="10"
                            android:background="#bbbbbb"
                            android:text="@string/me_edit_name"
                            android:layout_height="match_parent"/>
                        <Button
                            android:layout_marginRight="5sp"
                            android:layout_marginLeft="5sp"
                            android:layout_width="0px"
                            android:layout_weight="10"
                            android:background="#bbbbbb"
                            android:text="@string/me_edit_password"
                            android:layout_height="match_parent"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="40">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="40">
                    <Button
                        android:id="@+id/me_logout"
                        android:layout_gravity="center"
                        android:layout_marginLeft="40sp"
                        android:layout_marginRight="40sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/me_logout"
                        android:textSize="30sp"
                        android:background="#dd3232"
                        android:textColor="#ffffff"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>